syntax = "proto2";

message PlaylistMetadata {
    // Title of the playlist
    optional string title = 2;

    // Description of the playlist
    optional string description = 3;

    // IDs of the videos to include in playlist (in given order)
    repeated uint64 video_ids = 4;
    
    // index into external [assets array](#.Assets)
    optional uint32 thumbnail_photo = 5;

    // Playlist status, whether it is public or private. If the 
    // field is omitted the default playlist status would be public???
    optional bool is_public = 6;
}
